Remove extraneous image from HOW section (image08)

--- a/index.html
+++ b/index.html
@@ -215,11 +215,7 @@
                       appropriate for each session.</span
                     >
                   </p>
-                  <div id="image08" class="image-component instance-8">
-                    <a href="#what" class="frame">
-                      <img src="assets/images/image07.png" alt="Massage studio in Cambridge" />
-                    </a>
-                  </div>
+                  <!-- image removed: was a large decorative image on HOW section -->
                   <p id="text13" class="text-component instance-13 style-1">
                     <span class="p"
                       >My standard session is <em>75 minutes</em> — the ideal amount of time for
