Add treatment-room.jpg and clean up scripts directory

--- a/index.html
+++ b/index.html
@@ -214,11 +214,18 @@
                       appropriate for each session.</span
                     >
                   </p>
-                  <div style="text-align: center; margin: 2rem 0;">
+                  <div style="text-align: center; margin: 2rem 0">
                     <img
                       src="assets/images/treatment-room.jpg"
                       alt="Treatment room"
-                      style="width: 50%; max-width: 720px; border-radius: 45px; box-shadow: 0 8px 20px rgba(0,0,0,0.08); display: block; margin: 0 auto;"
+                      style="
+                        width: 50%;
+                        max-width: 720px;
+                        border-radius: 45px;
+                        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
+                        display: block;
+                        margin: 0 auto;
+                      "
                     />
                   </div>
                   <p id="text13" class="text-component instance-13 style-1">
